Fixed up template UI and make it responsive to different view sizes

--- a/template.html
+++ b/template.html
@@ -7,59 +7,84 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nerko+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playpen+Sans:wght@100..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <div class="recipe-wrapper">
-        <div class="">
-            <header>
+    <div class="recipe">
+        <section>
+            <div class="recipe-header">
                 <h1>RECIPETITLE</h1>
                 <ul class="recipe-info">
                     <li class="info-list">Cook Time: 30mins</li>
                     <li class="info-list">Servings: 5</li>
                     <li class="info-list">Category: Bread</li>
                 </ul>
-            </header>
+            </div>
 
-            <main class="recipe-wrapper">
+            <main>
                 <section class="extra-notes">
-                    <h2>Side Notes</h2>
-                    <p>Extra information here, melted butter, room temperature, tips and tricks, etc.</p>
+                    <div>
+                        <h2>Some Tips:</h2>
+                    </div>
+                    <div>
+                        <p>Extra information here, melted butter, room temperature, tips and tricks, etc.</p>
+                        <p>Can be short notes or sentences or directions</p>
+                        <p>Maybe on how to store the items and how long it will last.</p>
+                    </div>
                 </section>
 
-                <section class="recipe-ingredients">
-                    <ul class="ingredients">
-                        <li class="ingredient-list">flour</li>
-                        <li class="ingredient-list">flour</li>
-                        <li class="ingredient-list">flour</li>
-                        <li class="ingredient-list">flour</li>
-                        <li class="ingredient-list">flour</li>
-                        <li class="ingredient-list">flour</li>
-                        <li class="ingredient-list">flour</li>
-                        <li class="ingredient-list">flour</li>
-                        <li class="ingredient-list">flour</li>
-                        <li class="ingredient-list">flour</li>
-                        <li class="ingredient-list">flour</li>
-                        <li class="ingredient-list">flour</li>
-                        <li class="ingredient-list">flour</li>
-                        <li class="ingredient-list">flour</li>
-                    </ul>
-                </section>
+                <section class="recipe-wrapper">
+                    <div class="recipe-ingredients">
+                        <div>
+                            <h2>INGREDIENTS:</h2>
+                        </div>
 
-                <section class="recipe-directions">
-                    <ul class="directions">
-                        <li class="directions-list">numbered</li>
-                        <li class="directions-list">numbered</li>
-                        <li class="directions-list">numbered</li>
-                        <li class="directions-list">numbered</li>
-                        <li class="directions-list">numbered</li>
-                        <li class="directions-list">numbered</li>
-                        <li class="directions-list">numbered</li>
-                        <li class="directions-list">numbered</li>
-                        <li class="directions-list">numbered</li>
-                        <li class="directions-list">numbered</li>
-                        <li class="directions-list">numbered</li>
-                    </ul>
+                        <div>
+                            <ul class="ingredients">
+                                <li class="ingredient-list">flour</li>
+                                <li class="ingredient-list">flour</li>
+                                <li class="ingredient-list">flour</li>
+                                <li class="ingredient-list">flour</li>
+                                <li class="ingredient-list">flour</li>
+                                <li class="ingredient-list">flour</li>
+                                <li class="ingredient-list">flour</li>
+                                <li class="ingredient-list">flour</li>
+                                <li class="ingredient-list">flour</li>
+                                <li class="ingredient-list">flour</li>
+                                <li class="ingredient-list">flour</li>
+                                <li class="ingredient-list">flour</li>
+                                <li class="ingredient-list">flour</li>
+                                <li class="ingredient-list">flour</li>
+                            </ul>
+                        </div>
+                    </div>
+
+
+                    <div class="recipe-directions">
+                        <div>
+                            <h2>DIRECTIONS:</h2>
+                        </div>
+
+                        <ul class="directions">
+                            <li class="directions-list">recipe directions that are super long and need to wrap when it reaches a certain screen width and correctly format the text</li>
+                            <li class="directions-list">recipe directions that are super long and need to wrap when it reaches a certain screen width and correctly format the text</li>
+                            <li class="directions-list">recipe directions that are super long and need to wrap when it reaches a certain screen width and correctly format the text</li>
+                            <li class="directions-list">recipe directions that are super long and need to wrap when it reaches a certain screen width and correctly format the text</li>
+                            <li class="directions-list">recipe directions that are super long and need to wrap when it reaches a certain screen width and correctly format the text</li>
+                            <li class="directions-list">recipe directions that are super long and need to wrap when it reaches a certain screen width and correctly format the text</li>
+                            <li class="directions-list">recipe directions that are super long and need to wrap when it reaches a certain screen width and correctly format the text</li>
+                            <li class="directions-list">recipe directions that are super long and need to wrap when it reaches a certain screen width and correctly format the text</li>
+                            <li class="directions-list">recipe directions that are super long and need to wrap when it reaches a certain screen width and correctly format the text</li>
+                            <li class="directions-list">recipe directions that are super long and need to wrap when it reaches a certain screen width and correctly format the text</li>
+                            <li class="directions-list">recipe directions that are super long and need to wrap when it reaches a certain screen width and correctly format the text</li>
+                            <li class="directions-list">recipe directions that are super long and need to wrap when it reaches a certain screen width and correctly format the text</li>
+                            <li class="directions-list">recipe directions that are super long and need to wrap when it reaches a certain screen width and correctly format the text</li>
+                            <li class="directions-list">recipe directions that are super long and need to wrap when it reaches a certain screen width and correctly format the text</li>
+                            <li class="directions-list">recipe directions that are super long and need to wrap when it reaches a certain screen width and correctly format the text</li>
+
+                        </ul>
+                    </div>
                 </section>
             </main>
         </div>
