--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Nerko+One&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css">
+      <link href="https://fonts.googleapis.com/css2?family=Playpen+Sans:wght@100..800&display=swap" rel="stylesheet">
+      <link rel="stylesheet" href="css/styles.css">
   </head>
   <body class="home">
     <!-- //  INTRO  // -->
