Adding in recipes, editted the search bar UI

--- a/recipes/ube-mochi.html
+++ b/recipes/ube-mochi.html
@@ -14,10 +14,10 @@
     <a class="btn download-link" href="../components/sweets.html">Back</a>
     <div class="recipe">
             <div class="recipe-header">
-                <h1>RECIPETITLE</h1>
+                <h1>UBE MOCHI BREAD</h1>
                 <ul class="recipe-info">
-                    <li class="info-list">Cook Time: 30mins</li>
-                    <li class="info-list">Servings: 5</li>
+                    <li class="info-list">Cook Time: 2 hours</li>
+                    <li class="info-list">Servings: 12</li>
                     <li class="info-list">Category: Bread</li>
                 </ul>
             </div>
@@ -42,20 +42,17 @@
 
                         <div>
                             <ul class="ingredients">
-                                <li class="ingredient-list"></li>
-                                <li class="ingredient-list"></li>
-                                <li class="ingredient-list"></li>
-                                <li class="ingredient-list"></li>
-                                <li class="ingredient-list"></li>
-                                <li class="ingredient-list"></li>
-                                <li class="ingredient-list"></li>
-                                <li class="ingredient-list"></li>
-                                <li class="ingredient-list"></li>
-                                <li class="ingredient-list"></li>
-                                <li class="ingredient-list"></li>
-                                <li class="ingredient-list"></li>
-                                <li class="ingredient-list"></li>
-                                <li class="ingredient-list"></li>
+                                <li class="ingredient-list">270g Mochi bread mix</li>
+                                <li class="ingredient-list">35g sugar</li>
+                                <li class="ingredient-list">15g ube powder</li>
+                                <li class="ingredient-list">1 egg</li>
+                                <li class="ingredient-list">120mL of water</li>
+                                <li class="ingredient-list">25g unsalted butter (melted)</li>
+                                <li class="ingredient-list">100g mochiko flour</li>
+                                <li class="ingredient-list">30g corn starch</li>
+                                <li class="ingredient-list">50g sugar</li>
+                                <li class="ingredient-list">160mL water</li>
+                                <li class="ingredient-list">1 TSP oil</li>
                             </ul>
                         </div>
                     </div>
@@ -67,15 +64,15 @@
                         </div>
 
                         <ul class="directions">
-                            <li class="directions-list"></li>
-                            <li class="directions-list"></li>
-                            <li class="directions-list"></li>
-                            <li class="directions-list"></li>
-                            <li class="directions-list"></li>
-                            <li class="directions-list"></li>
-                            <li class="directions-list"></li>
-                            <li class="directions-list"></li>
-                            <li class="directions-list"></li>
+                            <li class="directions-list">Mix together the mochi bread mix, sugar, and ube powder</li>
+                            <li class="directions-list">Knead in the egg and water until it is smooth (~20mins)</li>
+                            <li class="directions-list">Add in the melted butter then knead again (don't over knead)</li>
+                            <li class="directions-list">Cover the bowl with a damp towel and rest for 1 hour to rise</li>
+                            <li class="directions-list">Divide into small bit size pieces and cover with a towel again to rise for 15 more minutes</li>
+                            <li class="directions-list">In another bowl, mix together the mochiko flour, corn starch, sugar, and water</li>
+                            <li class="directions-list">Then add in the oil and mix well</li>
+                            <li class="directions-list">Steam for 20 mins then let it cool</li>
+                            <li class="directions-list">Knead it with plastic </li>
                             <li class="directions-list"></li>
                             <li class="directions-list"></li>
                             <li class="directions-list"></li>
