Almost all recipes added into the folder

--- a/recipes/pop-over-bread.html
+++ b/recipes/pop-over-bread.html
@@ -14,9 +14,9 @@
     <a class="btn download-link" href="../components/breads.html">Back</a>
     <div class="recipe">
             <div class="recipe-header">
-                <h1>BISCUITS</h1>
+                <h1>POP-OVER BREAD</h1>
                 <ul class="recipe-info">
-                    <li class="info-list">Cook Time: 30mins</li>
+                    <li class="info-list">Cook Time: 40mins</li>
                     <li class="info-list">Servings: 8</li>
                     <li class="info-list">Category: Bread</li>
                 </ul>
@@ -28,7 +28,8 @@
                         <h2>Some Tips:</h2>
                     </div>
                     <div>
-                        <p>Do not over stir in this recipe!!</p>
+                        <p>This recipe requires a pop-over bread tin.</p>
+                        <p>DO NOT DISTURB THE BAKING PROCESS FOR THE 30 MINUTES.</p>
                     </div>
                 </section>
 
@@ -40,12 +41,13 @@
 
                         <div>
                             <ul class="ingredients">
-                                <li class="ingredient-list">2 cups flour</li>
-                                <li class="ingredient-list">2 TSP baking powder</li>
-                                <li class="ingredient-list">1/2 tsp baking soda</li>
-                                <li class="ingredient-list">3/4 tsp salt</li>
-                                <li class="ingredient-list">1 stick (1/2 cup) butter (cubed)</li>
-                                <li class="ingredient-list">1 cup buttermilk</li>
+                                <li class="ingredient-list">Some melted butter</li>
+                                <li class="ingredient-list">2 eggs</li>
+                                <li class="ingredient-list">1 cup milk</li>
+                                <li class="ingredient-list">1 TBSP butter</li>
+                                <li class="ingredient-list">1 TSP sugar</li>
+                                <li class="ingredient-list">1 TSP salt</li>
+                                <li class="ingredient-list">1 cup flour</li>
                             </ul>
                         </div>
                     </div>
@@ -57,12 +59,15 @@
                         </div>
 
                         <ul class="directions">
-                            <li class="directions-list">Preheat the oven to 475 degrees</li>
-                            <li class="directions-list">Line a baking sheet with parchment paper and grease it</li>
-                            <li class="directions-list">In a bowl, mix together the flour, baking powder, baking soda, and salt</li>
-                            <li class="directions-list">Then take the cubed butter and put it into the bowl.  Knead with your fingers squishing into pea sized lumps</li>
-                            <li class="directions-list">Pour in the buttermilk and mix until just combined</li>
-                            <li class="directions-list">Scoop onto the baking sheet and bake for 12-14 minutes</li>
+                            <li class="directions-list">Preheat over to 425 degrees</li>
+                            <li class="directions-list">Take your pop-over pan and drizzle with some melted butter in each cup</li>
+                            <li class="directions-list">Put it in the oven while it preheats</li>
+                            <li class="directions-list">Beat together the eggs, milk, butter, sugar, and salt</li>
+                            <li class="directions-list">Add in the flour little by little until all is incorporated</li>
+                            <li class="directions-list">Take the tin out of the oven and fill each about halfway up</li>
+                            <li class="directions-list">Bake for 15-20 minutes then reduce the heat to 350 degrees</li>
+                            <li class="directions-list">Continue baking for 15 more minutes</li>
+                            <li class="directions-list">It is ready when the bread is puffed and browned</li>
                         </ul>
                     </div>
                 </section>
