--- a/recipes/ube-mochi.html
+++ b/recipes/ube-mochi.html
@@ -11,13 +11,13 @@
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
-    <a class="btn download-link" href="../components/sweets.html">Back</a>
+    <a class="btn download-link" href="../components/breads.html">Back</a>
     <div class="recipe">
             <div class="recipe-header">
                 <h1>UBE MOCHI BREAD</h1>
                 <ul class="recipe-info">
-                    <li class="info-list">Cook Time: 2 hours</li>
-                    <li class="info-list">Servings: 12</li>
+                    <li class="info-list">Cook Time: 4 hours</li>
+                    <li class="info-list">Servings: 20</li>
                     <li class="info-list">Category: Bread</li>
                 </ul>
             </div>
@@ -72,11 +72,11 @@
                             <li class="directions-list">In another bowl, mix together the mochiko flour, corn starch, sugar, and water</li>
                             <li class="directions-list">Then add in the oil and mix well</li>
                             <li class="directions-list">Steam for 20 mins then let it cool</li>
-                            <li class="directions-list">Knead it with plastic </li>
-                            <li class="directions-list"></li>
-                            <li class="directions-list"></li>
-                            <li class="directions-list"></li>
-                            <li class="directions-list"></li>
+                            <li class="directions-list">Knead it with plastic wrap then divide the mochi into the same number of pieces as the bread</li>
+                            <li class="directions-list">Layer the bread then the mochi then the chocolate inside and seal well</li>
+                            <li class="directions-list">Cover with a damp towel and let it rise for an hour</li>
+                            <li class="directions-list">Preheat the oven to 350 degrees</li>
+                            <li class="directions-list">Lay out the balls on a baking sheet and cut a cross mark in each one then bake for 15 minutes</li>
                         </ul>
                     </div>
                 </section>
