--- a/recipes/chia-seed-pudding.html
+++ b/recipes/chia-seed-pudding.html
@@ -11,14 +11,14 @@
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
-    <a class="btn download-link" href="../components/breads.html">Back</a>
+    <a class="btn download-link" href="../components/nobake.html">Back</a>
     <div class="recipe">
             <div class="recipe-header">
-                <h1>BISCUITS</h1>
+                <h1>CHIA SEED PUDDING</h1>
                 <ul class="recipe-info">
-                    <li class="info-list">Cook Time: 30mins</li>
-                    <li class="info-list">Servings: 8</li>
-                    <li class="info-list">Category: Bread</li>
+                    <li class="info-list">Cook Time: 10mins</li>
+                    <li class="info-list">Servings: 3</li>
+                    <li class="info-list">Category: Snack</li>
                 </ul>
             </div>
 
@@ -28,7 +28,7 @@
                         <h2>Some Tips:</h2>
                     </div>
                     <div>
-                        <p>Do not over stir in this recipe!!</p>
+                        <p>I find it best NOT to use airtight mason jars because the chia seed soak up too much liquid then it's hard by the morning</p>
                     </div>
                 </section>
 
@@ -40,12 +40,11 @@
 
                         <div>
                             <ul class="ingredients">
-                                <li class="ingredient-list">2 cups flour</li>
-                                <li class="ingredient-list">2 TSP baking powder</li>
-                                <li class="ingredient-list">1/2 tsp baking soda</li>
-                                <li class="ingredient-list">3/4 tsp salt</li>
-                                <li class="ingredient-list">1 stick (1/2 cup) butter (cubed)</li>
-                                <li class="ingredient-list">1 cup buttermilk</li>
+                                <li class="ingredient-list">1/4 cup chia seeds</li>
+                                <li class="ingredient-list">1 cup coconut milk</li>
+                                <li class="ingredient-list">3/4 cup greek yogurt</li>
+                                <li class="ingredient-list">2 TBSP maple syrup / honey</li>
+                                <li class="ingredient-list">Vanilla</li>
                             </ul>
                         </div>
                     </div>
@@ -57,12 +56,10 @@
                         </div>
 
                         <ul class="directions">
-                            <li class="directions-list">Preheat the oven to 475 degrees</li>
-                            <li class="directions-list">Line a baking sheet with parchment paper and grease it</li>
-                            <li class="directions-list">In a bowl, mix together the flour, baking powder, baking soda, and salt</li>
-                            <li class="directions-list">Then take the cubed butter and put it into the bowl.  Knead with your fingers squishing into pea sized lumps</li>
-                            <li class="directions-list">Pour in the buttermilk and mix until just combined</li>
-                            <li class="directions-list">Scoop onto the baking sheet and bake for 12-14 minutes</li>
+                            <li class="directions-list">Mix all ingredients together in a bowl</li>
+                            <li class="directions-list">Let it sit for 30 minutes</li>
+                            <li class="directions-list">Stir the mixture then cover with saran wrap touching the surface</li>
+                            <li class="directions-list">Store in Fridge overnight</li>
                         </ul>
                     </div>
                 </section>
