--- a/recipes/matcha-latte.html
+++ b/recipes/matcha-latte.html
@@ -11,14 +11,14 @@
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
-    <a class="btn download-link" href="../components/breads.html">Back</a>
+    <a class="btn download-link" href="../components/nobake.html">Back</a>
     <div class="recipe">
             <div class="recipe-header">
-                <h1>BISCUITS</h1>
+                <h1>MATCHA LATTE BASE</h1>
                 <ul class="recipe-info">
-                    <li class="info-list">Cook Time: 30mins</li>
-                    <li class="info-list">Servings: 8</li>
-                    <li class="info-list">Category: Bread</li>
+                    <li class="info-list">Cook Time: 5mins</li>
+                    <li class="info-list">Servings: 1</li>
+                    <li class="info-list">Category: Drink</li>
                 </ul>
             </div>
 
@@ -28,7 +28,7 @@
                         <h2>Some Tips:</h2>
                     </div>
                     <div>
-                        <p>Do not over stir in this recipe!!</p>
+                        <p>You can mix in some hojicha powder to give it a sweeter taste.</p>
                     </div>
                 </section>
 
@@ -40,12 +40,11 @@
 
                         <div>
                             <ul class="ingredients">
-                                <li class="ingredient-list">2 cups flour</li>
-                                <li class="ingredient-list">2 TSP baking powder</li>
-                                <li class="ingredient-list">1/2 tsp baking soda</li>
-                                <li class="ingredient-list">3/4 tsp salt</li>
-                                <li class="ingredient-list">1 stick (1/2 cup) butter (cubed)</li>
-                                <li class="ingredient-list">1 cup buttermilk</li>
+                                <li class="ingredient-list">3/4 cup milk</li>
+                                <li class="ingredient-list">2 TSP honey</li>
+                                <li class="ingredient-list">Ice</li>
+                                <li class="ingredient-list">44mL hot water</li>
+                                <li class="ingredient-list">1 TSP matcha</li>
                             </ul>
                         </div>
                     </div>
@@ -57,12 +56,11 @@
                         </div>
 
                         <ul class="directions">
-                            <li class="directions-list">Preheat the oven to 475 degrees</li>
-                            <li class="directions-list">Line a baking sheet with parchment paper and grease it</li>
-                            <li class="directions-list">In a bowl, mix together the flour, baking powder, baking soda, and salt</li>
-                            <li class="directions-list">Then take the cubed butter and put it into the bowl.  Knead with your fingers squishing into pea sized lumps</li>
-                            <li class="directions-list">Pour in the buttermilk and mix until just combined</li>
-                            <li class="directions-list">Scoop onto the baking sheet and bake for 12-14 minutes</li>
+                            <li class="directions-list">Shake together the ice and milk in a shaker bottle</li>
+                            <li class="directions-list">Pour it into a serving cup with ice</li>
+                            <li class="directions-list">Mix together the hot water and honey until dissolved</li>
+                            <li class="directions-list">Add in the matcha powder untill there are no clumps</li>
+                            <li class="directions-list">Pour Matcha mixture over the milk</li>
                         </ul>
                     </div>
                 </section>
